working on comparison/tests
